--- a/.travis.yml
+++ b/.travis.yml
@@ -151,7 +151,7 @@ script:
       sudo pip install pyodbc==3.0.7 
       CLICKHOUSE_SERVER_IP='localhost'
       ODBC_DRIVER_PATH=$(realpath driver/libclickhouseodbc.dylib)
-      ODBC_DRIVER_PATH=$(realpath driver/libclickhouseodbcw.dylib)
+      ODBC_DRIVERW_PATH=$(realpath driver/libclickhouseodbcw.dylib)
       # echo "Unable to test on OSX since docker is not supported on Travis OSX agents."; exit ${TRAVIS_TEST_RESULT};
     else 
       # Using absolute path to compiler to fix setup.py issue of pyodbc: unable to execute 'clang': No such file or directory
