Set ODBCSYSINI too

--- a/.travis.yml
+++ b/.travis.yml
@@ -170,6 +170,7 @@ script:
   - echo "Compose ODBC config"
   - export ODBCINSTINI=$HOME/.odbcinst.ini
   - export ODBCINI=$HOME/.odbc.ini
+  - export ODBCSYSINI=$ODBCINSTINI
   - |
     cat > $ODBCINSTINI <<-EOF
     [ODBC Drivers]
@@ -211,10 +212,4 @@ script:
     TraceFile   = /tmp/clickhouse-odbc-driver-w-trace.log
     EOF
   - echo "Staring tests..."
-  - echo $ODBC_DRIVERW_PATH
-  - echo $CLICKHOUSE_SERVER_IP
-  - echo $ODBCINSTINI
-  - echo $ODBCINI
-  - cat $ODBCINSTINI
-  - cat $ODBCINI
   - ctest -VV
