--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,6 @@ addons:
 
 matrix:
     include:
-        # fastest builds first:
-
         # clang5 iodbc unbundled  Too old poco 1.3
         #- os: linux
         #  compiler: clang
@@ -38,16 +36,6 @@ matrix:
         #      packages: [ ninja-build, libstdc++-8-dev, libpoco-dev, iodbc, libiodbc2, libiodbc2-dev ]
         #  git:
         #    submodules: false
-
-        # apple-clang iodbc unbundled
-        - os: osx
-          env: MATRIX_EVAL="export ODBC_LIB=libiodbc2 CMAKE_FLAGS=-DUNBUNDLED=1 HOMEBREW_PACKAGES='libiodbc poco'" 
-          git:
-            submodules: false
-          # addons:
-          #   homebrew:
-          #     packages: [ ninja, poco, iodbc, libiodbc2, libiodbc2-dev ]
-
 
         # clang5 iodbc
         - os: linux
@@ -91,19 +79,28 @@ matrix:
               sources: [ ubuntu-toolchain-r-test ]
               packages: [ ninja-build, gcc-7, g++-7, unixodbc, unixodbc-bin, unixodbc-dev, perl, libdbi-perl, libdbd-odbc-perl, python, python-pyodbc ]
 
+        # apple-clang iodbc unbundled
+        - os: osx
+          env: MATRIX_EVAL="export ODBC_LIB=libiodbc2 CMAKE_FLAGS=-DUNBUNDLED=1 HOMEBREW_PACKAGES='libiodbc poco'" 
+          git:
+            submodules: false
+          # addons:
+          #   homebrew:
+          #     packages: [ ninja, poco, libiodbc ]
+
         # apple-clang iodbc
         - os: osx
           env: MATRIX_EVAL="export ODBC_LIB=libiodbc HOMEBREW_PACKAGES='libiodbc'" 
           # addons:
           #   homebrew:
-          #     packages: [ ninja, libiodbc ]
+          #     packages: [ ninja, poco, libiodbc ]
 
         # apple-clang unixodbc
         - os: osx
           env: MATRIX_EVAL="export ODBC_LIB=unixodbc HOMEBREW_PACKAGES='unixodbc'" 
           # addons:
           #   homebrew:
-          #     packages: [ ninja, unixodbc ]
+          #     packages: [ ninja, poco, libiodbc ]
 
 
     exclude:
@@ -136,6 +133,12 @@ script:
   # unixODBC do the same by default (2 bytes per char), but can be switched to wchar_t (4 bytes) (SQL_WCHART_CONVERT)
   # iODBC always use wchar_t (4 bytes)
   # so driver compiled for iODBC will not work properly with unixODBC software
+  - |
+    if [[ $ODBC_LIB =~ "iodbc" ]]; then
+      CMAKE_FLAGS=-DFIND_IODBC_FIRST=1 $CMAKE_FLAGS
+    else
+      CMAKE_FLAGS=-DFIND_UNIXODBC_FIRST=1 $CMAKE_FLAGS
+    fi
   - cmake -G Ninja -DCMAKE_CXX_COMPILER=`which $CXX` -DCMAKE_C_COMPILER=`which $CC` -DTEST_DSN=clickhouse_localhost -DTEST_DSN_W=clickhouse_localhost_w $CMAKE_FLAGS ..
   - cmake --build . --target all
   # unit-tests
@@ -172,7 +175,7 @@ script:
     export ODBCSYSINI=$HOME
     export ODBCINSTINI=.odbcinst.ini
     export ODBCINI=$ODBCSYSINI/.odbc.ini
-    if [ "$ODBC_LIB" == "libiodbc2" ]; then
+    if [[ $ODBC_LIB =~ "iodbc" ]]; then
       # Full path to a custom odbcinst.ini in ODBCINSTINI for iODBC.
       export ODBCINSTINI=$ODBCSYSINI/$ODBCINSTINI
     fi
@@ -200,7 +203,7 @@ script:
     clickhouse_localhost_w = clickhouse_driver_w
 
     [clickhouse_localhost]
-    Driver      = ${ODBC_DRIVER_PATH}
+    Driver      = clickhouse_driver
     Description = ClickHouse DSN (ASCII, localhost)
     Url         = http://${CLICKHOUSE_SERVER_IP}
     Timeout     = 30
@@ -208,7 +211,7 @@ script:
     TraceFile   = /tmp/clickhouse-odbc-driver-trace.log
 
     [clickhouse_localhost_w]
-    Driver      = ${ODBC_DRIVERW_PATH}
+    Driver      = clickhouse_driver_w
     Description = ClickHouse DSN (Unicode, localhost)
     Url         = http://${CLICKHOUSE_SERVER_IP}
     Timeout     = 30
