--- a/.travis.yml
+++ b/.travis.yml
@@ -114,8 +114,7 @@ install:
     # brew update is to mitigate Travis error "Error: Your Homebrew is outdated. Please run `brew update`."
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then echo "installing ninja + ${HOMEBREW_PACKAGES}"; brew install ninja ${HOMEBREW_PACKAGES}; fi
-    # see https://gist.github.com/filimonov/c61b1fa07aa032293dfaf9e97de2c09e i hope later brew package will appear
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then echo "installing & starting ClickHouse";  ( curl -sSL https://gist.githubusercontent.com/filimonov/c61b1fa07aa032293dfaf9e97de2c09e/raw/chmac.sh | bash ) ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then echo "installing & starting ClickHouse"; ./test/chmac.sh; fi # TODO: use native package manager when available
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ -n "$ODBC_LIB" ]; then sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu bionic main universe"; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ -n "$ODBC_LIB" ]; then sudo apt-get update -q > build.log 2>&1 || (cat build.log && exit 1); fi
   # Need in binulils because /usr/bin/ld: /usr/lib/gcc/x86_64-linux-gnu/8/../../../x86_64-linux-gnu/libodbc.a(logOpen.o): unrecognized relocation (0x2a) in section `.text'
