--- a/.travis.yml
+++ b/.travis.yml
@@ -150,11 +150,11 @@ script:
       curl https://bootstrap.pypa.io/get-pip.py | sudo python
       # it looks like that older version works with iodbc out of the box on Mac
       # https://github.com/mkleehammer/pyodbc/commit/aa178bfd25afd6fb90c77d054c1bcf0a6aa54411
-      sudo pip install pyodbc==3.0.7 
+      sudo pip install pyodbc==3.0.7
+      # In macOS, ClickHouse is installed and running as a separate process on this same system.
       CLICKHOUSE_SERVER_IP='localhost'
       ODBC_DRIVER_PATH=$(realpath driver/libclickhouseodbc.dylib)
       ODBC_DRIVERW_PATH=$(realpath driver/libclickhouseodbcw.dylib)
-      # echo "Unable to test on OSX since docker is not supported on Travis OSX agents."; exit ${TRAVIS_TEST_RESULT};
     else 
       # Using absolute path to compiler to fix setup.py issue of pyodbc: unable to execute 'clang': No such file or directory
       #- sudo CC=`which $CC` CXX=`which $CXX` pip install pyodbc -V --disable-pip-version-check
