Change DM detection debug output

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,7 +8,6 @@ find_program(SQLCMD sqlcmd)
 
 set(PERL_USES_UNIXODBC 0)
 set(PERL_USES_IODBC 0)
-set(_perl_output)
 
 if(PERL)
     execute_process(
@@ -17,6 +16,7 @@ if(PERL)
         OUTPUT_STRIP_TRAILING_WHITESPACE
 #       ERROR_QUIET
     )
+    message(STATUS "ODBC Driver Manager used by Perl's DBD::ODBC: ${_perl_output}")
     if(_perl_output MATCHES "unixODBC")
         set(PERL_USES_UNIXODBC 1)
     endif()
@@ -27,7 +27,6 @@ endif()
 
 set(PYTHON_USES_UNIXODBC 0)
 set(PYTHON_USES_IODBC 0)
-set(_python_output)
 
 if(PYTHON)
     execute_process(
@@ -36,6 +35,7 @@ if(PYTHON)
         OUTPUT_STRIP_TRAILING_WHITESPACE
 #       ERROR_QUIET
     )
+    message(STATUS "ODBC Driver Manager used by Python's pyodbc: ${_python_output}")
     if(_python_output MATCHES "unixODBC")
         set(PYTHON_USES_UNIXODBC 1)
     endif()
@@ -48,11 +48,9 @@ message(STATUS "Testing with:\n\t"
     "TEST_DSN=${TEST_DSN}\n\t"
     "TEST_DSN_W=${TEST_DSN_W}\n\t"
     "PERL=${PERL}\n\t"
-    "ODBC Driver Manager used by Perl DBD::ODBC: ${_perl_output}\n\t"
     "PERL_USES_UNIXODBC=${PERL_USES_UNIXODBC}\n\t"
     "PERL_USES_IODBC=${PERL_USES_IODBC}\n\t"
     "PYTHON=${PYTHON}\n\t"
-    "ODBC Driver Manager used by pyodbc: ${_python_output}\n\t"
     "PYTHON_USES_UNIXODBC=${PYTHON_USES_UNIXODBC}\n\t"
     "PYTHON_USES_IODBC=${PYTHON_USES_IODBC}\n\t"
     "ISQL=${ISQL}\n\t"
