Enrich build matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,32 @@ env:
 matrix:
   include:
 
-    - name: "Ubuntu 18.04 - GCC - UnixODBC"
+    - name: "Ubuntu 18.04 - GCC - UnixODBC - Debug"
+      os: linux
+      dist: bionic
+      compiler: gcc
+      env: 
+        - CC=gcc
+        - CXX=g++
+        - ODBC_DRIVER_MANAGER=unixodbc
+        - BUILD_TYPE=Debug
+        - EXTERNAL_THIRD_PARTY=no
+        - PACKAGING=yes
+        - UNIT_TESTING=yes
+        - E2E_TESTING=yes
+        - CLICKHOUSE_SERVER_IMAGE="yandex/clickhouse-server:19.11.8.46"
+      services:
+        - docker
+      addons:
+        apt:
+          packages:
+            - gcc
+            - g++
+            - unixodbc
+            - unixodbc-bin
+            - unixodbc-dev
+
+    - name: "Ubuntu 18.04 - GCC - UnixODBC - RelWithDebInfo"
       os: linux
       dist: bionic
       compiler: gcc
@@ -33,9 +58,6 @@ matrix:
         - docker
       addons:
         apt:
-          sources:
-            #- ubuntu-toolchain-r-test
-            - sourceline: 'ppa:ubuntu-toolchain-r/test'
           packages:
             - gcc
             - g++
@@ -43,15 +65,15 @@ matrix:
             - unixodbc-bin
             - unixodbc-dev
 
-    - name: "Ubuntu 18.04 - Clang - UnixODBC"
+    - name: "Ubuntu 18.04 - GCC - UnixODBC - Release"
       os: linux
       dist: bionic
-      compiler: clang
+      compiler: gcc
       env: 
-        - CC=clang
-        - CXX=clang++
+        - CC=gcc
+        - CXX=g++
         - ODBC_DRIVER_MANAGER=unixodbc
-        - BUILD_TYPE=RelWithDebInfo
+        - BUILD_TYPE=Release
         - EXTERNAL_THIRD_PARTY=no
         - PACKAGING=yes
         - UNIT_TESTING=yes
@@ -61,16 +83,14 @@ matrix:
         - docker
       addons:
         apt:
-          sources:
-            #- ubuntu-toolchain-r-test
-            - sourceline: 'ppa:ubuntu-toolchain-r/test'
           packages:
-            - clang
+            - gcc
+            - g++
             - unixodbc
             - unixodbc-bin
             - unixodbc-dev
 
-    - name: "Ubuntu 18.04 - GCC - iODBC"
+    - name: "Ubuntu 18.04 - GCC - iODBC - RelWithDebInfo"
       os: linux
       dist: bionic
       compiler: gcc
@@ -88,9 +108,6 @@ matrix:
         - docker
       addons:
         apt:
-          sources:
-            #- ubuntu-toolchain-r-test
-            - sourceline: 'ppa:ubuntu-toolchain-r/test'
           packages:
             - gcc
             - g++
@@ -98,7 +115,31 @@ matrix:
             - libiodbc2
             - libiodbc2-dev
 
-    - name: "Ubuntu 18.04 - Clang - iODBC"
+    - name: "Ubuntu 18.04 - Clang - UnixODBC - RelWithDebInfo"
+      os: linux
+      dist: bionic
+      compiler: clang
+      env: 
+        - CC=clang
+        - CXX=clang++
+        - ODBC_DRIVER_MANAGER=unixodbc
+        - BUILD_TYPE=RelWithDebInfo
+        - EXTERNAL_THIRD_PARTY=no
+        - PACKAGING=yes
+        - UNIT_TESTING=yes
+        - E2E_TESTING=yes
+        - CLICKHOUSE_SERVER_IMAGE="yandex/clickhouse-server:19.11.8.46"
+      services:
+        - docker
+      addons:
+        apt:
+          packages:
+            - clang
+            - unixodbc
+            - unixodbc-bin
+            - unixodbc-dev
+
+    - name: "Ubuntu 18.04 - Clang - iODBC - RelWithDebInfo"
       os: linux
       dist: bionic
       compiler: clang
@@ -116,14 +157,89 @@ matrix:
         - docker
       addons:
         apt:
-          sources:
-            #- ubuntu-toolchain-r-test
-            - sourceline: 'ppa:ubuntu-toolchain-r/test'
           packages:
             - clang
             - iodbc
             - libiodbc2
             - libiodbc2-dev
+
+    - name: "Ubuntu 18.04 - GCC 8 - UnixODBC - RelWithDebInfo"
+      os: linux
+      dist: bionic
+      compiler: gcc
+      env: 
+        - CC=gcc-8
+        - CXX=g++-8
+        - ODBC_DRIVER_MANAGER=unixodbc
+        - BUILD_TYPE=RelWithDebInfo
+        - EXTERNAL_THIRD_PARTY=no
+        - PACKAGING=yes
+        - UNIT_TESTING=yes
+        - E2E_TESTING=yes
+        - CLICKHOUSE_SERVER_IMAGE="yandex/clickhouse-server:19.11.8.46"
+      services:
+        - docker
+      addons:
+        apt:
+          packages:
+            - gcc-8
+            - g++-8
+            - unixodbc
+            - unixodbc-bin
+            - unixodbc-dev
+
+    - name: "Ubuntu 18.04 - GCC 8 - iODBC - RelWithDebInfo"
+      os: linux
+      dist: bionic
+      compiler: gcc
+      env: 
+        - CC=gcc-8
+        - CXX=g++-8
+        - ODBC_DRIVER_MANAGER=iodbc
+        - BUILD_TYPE=RelWithDebInfo
+        - EXTERNAL_THIRD_PARTY=no
+        - PACKAGING=yes
+        - UNIT_TESTING=yes
+        - E2E_TESTING=yes
+        - CLICKHOUSE_SERVER_IMAGE="yandex/clickhouse-server:19.11.8.46"
+      services:
+        - docker
+      addons:
+        apt:
+          packages:
+            - gcc-8
+            - g++-8
+            - iodbc
+            - libiodbc2
+            - libiodbc2-dev
+
+    - name: "Ubuntu 18.04 - GCC - UnixODBC - RelWithDebInfo - System third-party libs"
+      os: linux
+      dist: bionic
+      compiler: gcc
+      env: 
+        - CC=gcc
+        - CXX=g++
+        - ODBC_DRIVER_MANAGER=unixodbc
+        - BUILD_TYPE=RelWithDebInfo
+        - EXTERNAL_THIRD_PARTY=yes
+        - PACKAGING=yes
+        - UNIT_TESTING=yes
+        - E2E_TESTING=yes
+        - CLICKHOUSE_SERVER_IMAGE="yandex/clickhouse-server:19.11.8.46"
+      services:
+        - docker
+      addons:
+        apt:
+          packages:
+            - gcc
+            - g++
+            - openssl
+            - libssl-dev
+            - libpoco-dev
+            - unixodbc
+            - unixodbc-bin
+            - unixodbc-dev
 
 before_install: |-
   if [ "$TRAVIS_OS_NAME" == "linux" ]; then
